# alfred-minute-inbox

./: README.md  info.plist  pyproject.toml
src/: destroy.py  extend.py  main.py  utils.py
tests/: test_workflow.py
